--- a/HausMietenNodeServer/package.json
+++ b/HausMietenNodeServer/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "HausMietenFinder node server",
   "dependencies": {
-    "express": "^4.10.2",
+    "express": "4.x",
     "socket.io": "^1.2.1"
   }
 }
