--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm
 
 *.iml
-*.pwd.php
+*ocal.config.php
 
 ## Directory-based project format:
 *.idea/
